Added WebApplication Targets to source control
- In order to get the build to work in TeamCity, we need to check in the WebApplications BuildTargets and associated DLL

--- a/CIDemoProject/CIDemoProject/CIDemoProject.csproj
+++ b/CIDemoProject/CIDemoProject/CIDemoProject.csproj
@@ -332,11 +332,11 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- The following is what we need in order to get the project to build on TeamCity -->
   <!-- Go ahead and uncomment these lines to make things work -->
-  <!--<Import Project="$(SolutionDir)\BuildTargets\WebApplications\Microsoft.WebApplication.targets" />-->
-  <!--<Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="false" />-->
+  <Import Project="$(SolutionDir)\BuildTargets\WebApplications\Microsoft.WebApplication.targets" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <!-- The following is the original targets as created by the New Project Wizard -->
   <!-- As part of the demo, go ahead and comment this line out -->
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <!--<Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />-->
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
     <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
